crates/biome_cli/tests/snapshots/main_commands_lint/no_unused_dependencies.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "all": false,
      "nursery": {
        "noUndeclaredDependencies": "error"
      }
    }
  }
}
```

## `fix.js`

```js
import "react";
import "lodash";
		
```

## `package.json`

```json
	{
  "dependencies": { "react": "latest", "react-dom": "^17.0.0" }
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
fix.js:2:8 lint/nursery/noUndeclaredDependencies ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The current dependency isn't specified in your package.json.
  
    1 │ import "react";
  > 2 │ import "lodash";
      │        ^^^^^^^^
    3 │ 		
  
  i This could lead to errors.
  
  i Add the dependency in your manifest.
  

```

```block
Checked 1 file in <TIME>. No fixes were applied.
Found 1 error.
```
