crates/biome_cli/tests/snapshots/main_commands_lint/nursery_unstable.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint check.js
```

## `check.js`

```js
if(a = b) {}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:4 lint/suspicious/noAssignInExpressions ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The assignment should not be in an expression.
  
  > 1 │ if(a = b) {}
      │    ^^^^^
  
  i The use of assignments in expressions is confusing.
    Expressions are often considered as side-effect free.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
