crates/biome_cli/tests/snapshots/main_commands_lint/only_per_plugin_selector_is_rejected.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=plugin/foo file.js
```

## `file.js`

```js
debugger
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `plugin/foo`: Per-plugin selection is not supported. Use `plugin` to target all
      plugins.
  


```
