crates/biome_cli/tests/snapshots/main_commands_lint/only_plugin_runs_only_plugins.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=plugin file.js
```

## `biome.json`

```json
{
  "plugins": ["noManualZIndex.grit"]
}
```

## `file.js`

```js
const merged = Object.assign({}, a, b);
debugger
```

## `noManualZIndex.grit`

```grit
`$fn($args)` where {
    $fn <: `Object.assign`,
    register_diagnostic(
        span = $fn,
        message = "Prefer object spread instead of Object.assign()",
        severity = "warn"
    )
}
```

# Emitted Messages

```block
file.js:1:16 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Prefer object spread instead of Object.assign()
  
  > 1 │ const merged = Object.assign({}, a, b);
      │                ^^^^^^^^^^^^^
    2 │ debugger
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
