crates/biome_cli/tests/snapshots/main_commands_lint/only_should_skip_plugin.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=noDebugger file.js
```

## `biome.json`

```json
{
  "plugins": ["noManualZIndex.grit"]
}
```

## `file.js`

```js
const merged = Object.assign({}, a, b);
debugger
```

## `noManualZIndex.grit`

```grit
`$fn($args)` where {
    $fn <: `Object.assign`,
    register_diagnostic(
        span = $fn,
        message = "Prefer object spread instead of Object.assign()",
        severity = "warn"
    )
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ const merged = Object.assign({}, a, b);
  > 2 │ debugger
      │ ^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   const merged = Object.assign({}, a, b);
    2   │ - debugger
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
