crates/biome_cli/tests/snapshots/main_commands_lint/should_apply_correct_file_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.ts
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended",
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `file.ts`

```ts
type A = { a: string }; type B = Partial<A>
```

# Emitted Messages

```block
file.ts:1:30 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This type alias B is unused.
  
  > 1 │ type A = { a: string }; type B = Partial<A>
      │                              ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
