crates/biome_cli/tests/snapshots/main_commands_lint/should_apply_root_settings_with_stdin_file_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --stdin-file-path=file.js --write --unsafe
```

## `biome.jsonc`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "single",
      "semicolons": "always"
    }
  }
}
```

# Input messages

```block
let a = "a"
```

# Emitted Messages

```block
const _a = 'a';

```
