crates/biome_cli/tests/snapshots/main_commands_lint/should_apply_root_settings_with_stdin_file_path_and_extended_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --stdin-file-path=file.js --write --unsafe
```

## `biome.jsonc`

```json
{
  "extends": ["base-config/biome"],
  "javascript": {
    "formatter": {
      "quoteStyle": "single"
    }
  }
}
```

## `node_modules/base-config/configs/biome.jsonc`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 3
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `node_modules/base-config/package.json`

```json
{
  "exports": {
    "./biome": "./configs/biome.jsonc"
  }
}
```

# Input messages

```block
let a = "a"; if (true) { a = "b" }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
let _a = 'a';
if (true) {
   _a = 'b';
}

```

```block
<TEMP_DIR>/should_apply_root_settings_with_stdin_file_path_and_extended_config/file.js:2:5 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
    1 │ let _a = 'a';
  > 2 │ if (true) {
      │     ^^^^
    3 │    _a = 'b';
    4 │ }
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```
