crates/biome_cli/tests/snapshots/main_commands_lint/should_apply_root_settings_with_stdin_file_path_and_extended_non_root_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --stdin-file-path=file.js --write --unsafe
```

## `biome.jsonc`

```json
{
  "extends": ["base-config/biome"],
  "javascript": {
    "formatter": {
      "quoteStyle": "single"
    }
  }
}
```

## `node_modules/base-config/configs/biome.jsonc`

```json
{
  "root": false,
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 3
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `node_modules/base-config/package.json`

```json
{
  "exports": {
    "./biome": "./configs/biome.jsonc"
  }
}
```

# Input messages

```block
let a = "a"; if (true) { a = "b" }
```

# Emitted Messages

```block
let _a = 'a';
if (true) {
   _a = 'b';
}

```
